--- a/package.json
+++ b/package.json
@@ -6,10 +6,15 @@
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.3.2",
         "@testing-library/user-event": "^7.1.2",
+        "caniuse-lite": "^1.0.30001291",
+        "firebase": "^9.6.1",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-router-dom": "^5.1.2",
         "react-scripts": "3.4.1",
+        "react-spinners-kit": "^1.9.1",
+        "semantic-ui-css": "^2.4.1",
+        "semantic-ui-react": "^2.0.4",
         "styled-components": "^5.1.0"
     },
     "scripts": {
